added class Card and rendering cards

--- a/index.html
+++ b/index.html
@@ -12,87 +12,21 @@
 <body>
     <div class="catalog__container container">
         <div class="catalog__body">
-            <div class="catalog__filter">1111</div>
+            <div class="catalog__filter">
+                знайти, фільтри і тд і тп
+            </div>
             <div class="catalog__cards">
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span>1234</span><span>uah</span></div>
-                    <button class="card__button">Купити</button>
-                </div>
-                <div class="catalog__card card">
-                    <div class="card__product-id">497532</div>
-                    <div class="card__img"><img src="https://img.moyo.ua/img/products/4975/32_174.jpg?1656677627"
-                            alt="product-img"></div>
-                    <div class="card__title">Смарт-годинник Samsung Galaxy Watch4 Classic 46mm eSim Black
-                        (SM-R895FZKASEK)</div>
-                    <div class="card__price">Ціна:<span></span></div>
-                    <button class="card__button">Купити</button>
-                </div>
+
             </div>
         </div>
         <button class="button-show-more">
             <div class="but-img"><img src="/images/icon-button.svg" alt=""></div>
-            <div class="but-text">Показати ще <span>24</span></div>
+            <div class="but-text">Показати ще <span class="cards-amount"></span></div>
         </button>
     </div>
+    <script src="js/class/Card.js"></script>
+    <script src="js/class/Cart.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
