changed json, render cards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <button class="button-show-more">
             <div class="but-img"><img src="/images/icon-button.svg" alt=""></div>
-            <div class="but-text">Показати ще <span class="cards-amount"></span></div>
+            <div class="but-text">Показати ще <span class="cards-amount"></span></d>
         </button>
     </div>
     <script src="js/class/Card.js"></script>
