--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 
 <body>
-    <div class="catalog__container container">
+    <div id="container" class="catalog__container container">
         <div class="catalog__body">
             <div class="catalog__filter">
                 знайти, фільтри і тд і тп
             </div>
             <div class="catalog__cards">
-
             </div>
         </div>
         <button class="button-show-more">
             <div class="but-img"><img src="/images/icon-button.svg" alt=""></div>
             <div class="but-text">Показати ще <span class="cards-amount"></span></d>
         </button>
+        <div id="cart" class="cart"></div>
     </div>
     <script src="js/class/Card.js"></script>
     <script src="js/class/Cart.js"></script>
