--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Cart_OOP</title>
 </head>
@@ -18,15 +19,33 @@
             <div class="catalog__cards">
             </div>
         </div>
-        <button class="button-show-more">
+        <button class="button-show-more btn btn-primary">
             <div class="but-img"><img src="/images/icon-button.svg" alt=""></div>
             <div class="but-text">Показати ще <span class="cards-amount"></span></d>
         </button>
-        <div id="cart" class="cart"></div>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Кошик</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="cart" class="cart"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
+                        <button type="button" class="btn btn-primary">Підтвердити замовлення</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/class/Card.js"></script>
     <script src="js/class/Cart.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
