fixed bug with goods amount and added empty cart img

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="container" class="catalog__container container">
+        <button class="cart-button btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
         <div class="catalog__body">
             <div class="catalog__filter">
                 знайти, фільтри і тд і тп
@@ -23,7 +24,6 @@
             <div class="but-img"><img src="/images/icon-button.svg" alt=""></div>
             <div class="but-text">Показати ще <span class="cards-amount"></span></d>
         </button>
-
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
